--- a/src/main/resources/templates/registerForm.html
+++ b/src/main/resources/templates/registerForm.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
     <header>
-        <head th:replace="fragments/base.html :: headerfiles(title='Vetrina')">
+        <head th:replace="fragments/base.html :: head(title='Vetrina')">
             <link rel="stylesheet" href="../static/css/style.css">
           </head>
     </header>
