--- a/src/main/resources/templates/loginForm.html
+++ b/src/main/resources/templates/loginForm.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-	<header>
-		<head th:replace="fragments/base.html :: headerfiles(title='Vetrina')">
-			<link rel="stylesheet" href="../static/css/style.css">
-		</head>
-	</header>
+	<head th:replace="fragments/base.html :: head(title='Vetrina')">
+		<link rel="stylesheet" href="../static/css/style.css">
+	</head>
 <body>
 	<div class="authenticationContainer">
 		<h3 th:if="${username}">Congratulazioni, ti sei registrato!</h3>
