--- a/src/main/resources/templates/categoriaForm.html
+++ b/src/main/resources/templates/categoriaForm.html
@@ -7,11 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    Nuova/Modifica categoria
+    CATEGORIA
     <form th:action="@{/admin/categoria/save}" method="post" th:object="${categoria}">
         <input type="hidden" th:field="*{id}">
         <div>
-          <span>Nome:</span>
           <span><input type="text" th:field="*{nome}" placeholder="Nome"></span>
         </div>
         <div>
