--- a/bin/src/main/resources/templates/loginForm.html
+++ b/bin/src/main/resources/templates/loginForm.html
@@ -4,17 +4,25 @@
 		<link rel="stylesheet" href="../static/css/style.css">
 	</head>
 <body>
-	<div class="formAuth">
+	<div class="authenticationContainer">
 		<h3 th:if="${username}">Congratulazioni, ti sei registrato!</h3>
 		<form action="home.html" th:action="@{/login}" method="get" th:method="post">
 			<h2>LOGIN</h2>
-				<span><input name="username" type="text" required placeholder="Username"/></span>
-				<span><input name="password" type="password" required placeholder="Password"/></span>
-				<span><button type="submit">LOGIN</button></span>
-					<p style="margin-bottom: 10px;">or</p>
+			<div class="formAuth">
+				<div>
+					<span><input name="username" type="text" required placeholder="Username"/></span>
+				</div>
+				<div>
+					<span><input name="password" type="password" required placeholder="Password"/></span>
+				</div>
+				<div>
+					<span><button type="submit">LOGIN</button></span>
+					<p>or</p>
+				</div>
+			</div>
 		</form>
 		<form action="registerForm.html" th:action="@{/register}" method="get">
-			<div>
+			<div class="formAuth">
 				<button id="register" type="submit">REGISTER</button>
 			</div>
 		</form>
