--- a/bin/src/main/resources/templates/registerForm.html
+++ b/bin/src/main/resources/templates/registerForm.html
@@ -6,9 +6,10 @@
           </head>
     </header>
 <body>
-	<div class="formAuth">
+	<div class="authenticationContainer">
         <form th:action="@{/register}" method="POST">
             <h2>REGISTER</h2>
+            <div class="formAuth">
                 <span><input type="text" placeholder="Username" required
                         th:field="${credentials.username}"/></span>
                 <span th:if="${#fields.hasErrors('credentials.username')}"
@@ -26,6 +27,7 @@
                 <span th:if="${#fields.hasErrors('utente.cognome')}"
                     th:errors="${utente.cognome}" th:style="'color:red'"></span>
                 <button type="submit">Register</button>
+            </div>
         </form>
 	</div>
 </body>
