--- a/bin/src/main/resources/templates/prodottoForm.html
+++ b/bin/src/main/resources/templates/prodottoForm.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head th:replace="fragments/base.html :: head(title='Vetrina')">
-        <link rel="stylesheet" href="../static/css/style.css">
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <title>Document</title>
+</head>
 <body>
     <h2>PRODOTTO:</h2>
-    <div class="formAuth">
+    <div class="formcontainer">
     <form th:action="@{/admin/prodotto/save}" method="post" th:object="${prodotto}">
         <input type="hidden" th:field="*{id}">
         <div>
@@ -15,6 +16,7 @@
             <span><input type="number" th:field="*{prezzo}" placeholder="Prezzo"></span>
         </div>
         <div>
+            <span>Categoria:</span>
             <span>
                 <select th:field="*{categoria}">
                     <option value="" disabled selected>Seleziona la categoria</option>
@@ -23,6 +25,7 @@
             </span>
         </div>
         <div>
+            <span>Produttore:</span>
             <span>
                 <select th:field="*{produttore}">
                     <option value="" disabled selected>Seleziona il produttore</option>
@@ -31,8 +34,8 @@
             </span>
         </div>
         <div>
-            <span><button  type="submit" th:if="${modifyForm}">Modifica</button></span>
-            <span><button  type="submit" th:if="!${modifyForm}">Aggiungi</button></span>
+            <span><button type="submit" th:if="${modifyForm}">Modifica</button></span>
+            <span><button type="submit" th:if="!${modifyForm}">Aggiungi</button></span>
         </div>
     </form>
     </div>
