--- a/bin/src/main/resources/templates/produttoreForm.html
+++ b/bin/src/main/resources/templates/produttoreForm.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head th:replace="fragments/base.html :: head(title='Vetrina')">
-        <link rel="stylesheet" href="../static/css/style.css">
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
 <body>
     <a href="home.html" th:href="@{/home}"><img src="/static/images/home.png"></a>
 </header>
-<h2>PRODUTTORE</h2>
-<div class="formAuth">
+<h2>Nuovo/modifica produttore:</h2>
+<div class="formcontainer">
 <form th:action="@{/admin/produttore/save}" method="post" th:object="${produttore}">
     <input type="hidden" th:field="*{id}">
     <div>
@@ -17,8 +20,8 @@
         <span><input type="text" th:field="*{sede}" placeholder="Sede"></span>
     </div>
     <div>
-        <span><button  type="submit" th:if="${modifyForm}">Modifica</button></span>
-        <span><button  type="submit" th:if="!${modifyForm}">Aggiungi</button></span>
+        <span><button type="submit" th:if="${modifyForm}">Modifica</button></span>
+        <span><button type="submit" th:if="!${modifyForm}">Aggiungi</button></span>
     </div>
 </form>
 </div>
