--- a/src/main/resources/templates/categoriaForm.html
+++ b/src/main/resources/templates/categoriaForm.html
@@ -1,22 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+    <head th:replace="fragments/base.html :: head(title='Vetrina')">
+        <link rel="stylesheet" href="../static/css/style.css">
+    </head>
 <body>
-    CATEGORIA
-    <form th:action="@{/admin/categoria/save}" method="post" th:object="${categoria}">
-        <input type="hidden" th:field="*{id}">
-        <div>
-          <span><input type="text" th:field="*{nome}" placeholder="Nome"></span>
-        </div>
-        <div>
-            <span><button type="submit" th:if="${modifyForm}">Modifica</button></span>
-            <span><button type="submit" th:if="!${modifyForm}">Aggiungi</button></span>
-        </div>
-    </form>
+    <h2>CATEGORIA:</h2>
+    <div class="formAuth">
+        <form th:action="@{/admin/categoria/save}" method="post" th:object="${categoria}">
+            <input type="hidden" th:field="*{id}">
+            <div>
+            <span><input type="text" th:field="*{nome}" placeholder="Nome"></span>
+            </div>
+            <div>
+                <span><button type="submit" th:if="${modifyForm}">Modifica</button></span>
+                <span><button type="submit" th:if="!${modifyForm}">Aggiungi</button></span>
+            </div>
+        </form>
+    </div>
 </body>
 </html>
