--- a/src/main/resources/templates/categorie.html
+++ b/src/main/resources/templates/categorie.html
@@ -6,6 +6,7 @@
     </head>
 </head>
 <body>
+    <h2>GESTICI CATEGORIE</h2>
     <div class="container">
         <div th:if="!${categorie.isEmpty}">
             <ul>
