--- a/src/main/resources/templates/prodotti.html
+++ b/src/main/resources/templates/prodotti.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <a th:href="@{/home}" alt="Home"><img src="/static/images/logout.png" th:src="@{/images/logout.png}"></a>
+        <a th:href="@{/logout}"><img src="/static/images/logout.png" th:src="@{/images/logout.png}"></a>
     </header>
     <div class="container">
         <form class="form" th:action="@{/prodotto/get/filtered}" method="get" th:object="${SearchProdotti}">
