--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -84,12 +84,6 @@ header img {
     justify-content: space-around;
 }
 
-.submitButton {
-    background-color: transparent;
-    border: 0px;
-    cursor: pointer;
-}
-
 .form {
     padding-top: 20px;
     padding-bottom: 5px;
@@ -162,6 +156,10 @@ button {
 	padding:5px 60px;
 	text-decoration:none;
 	text-shadow:0px 1px 0px #2f6627;
+}
+
+.submitButton:hover {
+    background: #54BAB9; 
 }
 
 .formAuth button {
