--- a/src/main/resources/templates/prodotti.html
+++ b/src/main/resources/templates/prodotti.html
@@ -13,23 +13,23 @@
         <form class="form" th:action="@{/prodotto/get/filtered}" method="get" th:object="${SearchProdotti}">
             <div class="cercaNome">
                 <span><input type="text" th:field="*{nomeProdotto}" placeholder="Cerca per nome prodotto"></span>
-                <a th:href="@{/admin/prodotto/formAdd}"><img src="/static/images/plus.png" th:src="@{/images/plus.png}"></a>
+                <a th:if="${admin}" th:href="@{/admin/prodotto/formAdd}"><img src="/static/images/plus.png" th:src="@{/images/plus.png}"></a>
             </div>
             <div class="cercaCategoria">
                 <select th:field="*{categoria}">
                     <option value="" selected>Filtra per categoria</option>
                     <option th:each="c : ${categorie}" th:value="${c.id}" th:text="${c.nome}"></option>
                 </select>
-                <a th:href="@{/admin/categoria/formAdd}"><img src="/static/images/plus.png" th:src="@{/images/plus.png}"></a>
-                <a th:href="@{/admin/categoria/get/all}"><img src="/static/images/settings.png" th:src="@{/images/settings.png}"></a>
+                <a th:if="${admin}" th:href="@{/admin/categoria/formAdd}"><img src="/static/images/plus.png" th:src="@{/images/plus.png}"></a>
+                <a th:if="${admin}" th:href="@{/admin/categoria/get/all}"><img src="/static/images/settings.png" th:src="@{/images/settings.png}"></a>
             </div>
             <div class="cercaProduttore">
                 <select th:field="*{produttore}">
                     <option value="" selected>Filtra per produttore</option>
                     <option th:each="p : ${produttori}" th:value="${p.id}" th:text="${p.nome}"></option>
                 </select>
-                <a th:href="@{/admin/produttore/formAdd}"><img src="/static/images/plus.png" th:src="@{/images/plus.png}"></a>
-                <a th:href="@{/admin/produttore/get/all}"><img src="/static/images/settings.png" th:src="@{/images/settings.png}"></a>
+                <a th:if="${admin}" th:href="@{/admin/produttore/formAdd}"><img src="/static/images/plus.png" th:src="@{/images/plus.png}"></a>
+                <a th:if="${admin}" th:href="@{/admin/produttore/get/all}"><img src="/static/images/settings.png" th:src="@{/images/settings.png}"></a>
             </div>
             <button class="submitButton" type="submit"><img src="/static/images/search.png" th:src="@{/images/search.png}"></button> 
         </form>
@@ -43,8 +43,8 @@
                             <h4 th:text="${prodotto.prezzo} + '€'">250.00€</h4>
                             <p th:text="${prodotto.categoria.nome}">Elettronica</p>
                             <div class="actions">
-                                <a th:href="@{'/admin/prodotto/formModify/' + ${prodotto.id}}"><img src="/static/images/pencil.png" th:src="@{/images/pencil.png}"></a>
-                                <a th:href="@{'/admin/prodotto/delete/' + ${prodotto.id}}"><img src="/static/images/delete.png" th:src="@{/images/delete.png}"></a>
+                                <a th:if="${admin}" th:href="@{'/admin/prodotto/formModify/' + ${prodotto.id}}"><img src="/static/images/pencil.png" th:src="@{/images/pencil.png}"></a>
+                                <a th:if="${admin}" th:href="@{'/admin/prodotto/delete/' + ${prodotto.id}}"><img src="/static/images/delete.png" th:src="@{/images/delete.png}"></a>
                             </div>
                         </div>
                     </div>
